--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -25,10 +25,17 @@ stylesheets:
   #  trackingId: UA-45997213-1
 #scripts:
 #  - ./static/intercom.js
+# nav: 
+#   - label: Training exercises
+#     page: developer-portal/index.md
+
 nav:
 
   - label: Training exercises
     page: developer-portal/index.md
+
+  - label: Training exercises 222
+    page: developer-portal/setup.md
 
   - label: External docs
     icon: ./images/redocly-icon-white.png
